# govsic

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: config.yml
examples/: apply.py  frame.py  info.py  interface.py
src/govsic/: __init__.py  constants.py  exceptions.py  parser.py  sic.py  standard_industrial_classification.py  types.py
src/govsic/data/: __init__.py  glossary.py  sections.py
src/sic/: __init__.py  constants.py  standard_industrial_classification.py
src/sic/data/: sections.py
tests/: test_data.py  test_info.py  test_parser.py  test_sic.py
