[metadata]
name = govsic
version = attr: package.__version__
author = Elliott Phillips
license = MIT
license_file = LICENSE
description = A small Python library to interface the Standard Industrial Classification protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ellsphillips/govsic
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    pandas>=1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
sic = py.typed